hphp/hack/test/typecheck/reified_generics/valid_targ_funcall.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function f<reify Tpain>(): void {}

function g<T>(): void {
  f<T>();
}
